--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Grand-Babylon-H-tel_2813
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Bennett, Arnold
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/859
     wikipedia: http://en.wikipedia.org/wiki/Arnold_Bennett
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2813#The-Grand-Babylon-H-tel
 gutenberg_issued: '2001-09-01'
 gutenberg_type: Text
 identifiers:
